<resources>
    <string name="app_name">UM</string>
    <string name="welcome_message">Your opinion in 3 mintues \n Respondent\'s background</string>
    <string name="get_started">Let\'s get started</string>
    <string name="text_gender">1.Gender / Jantina :</string>
    <string name="text_terms_service">Terms of Service</string>
    <string name="text_create_account"> <u>Create an account</u> </string>
    <string name="text_signin">SIGN IN</string>
    <string name="welcome_message2">Glad to see you!</string>
    <string name="forget_password">Forget Password?</string>
    <string name="remember_me">Remember me</string>
    <string name="username_text">Username</string>
    <string name="email_text">Email</string>
    <string name="password_text">Password</string>
    <string name="confirm_password_text">Re-password</string>
    <string name="age_text">Age</string>
    <string name="gender_text">Gender</string>
    
    <string name="text_empty_error">Mandatory Field</string>
    <string name="text_email_invalid">Invalid email</string>
    <string name="text_password_length_error">Password at least 6 characters</string>
    <string name="text_password_confirmation_error">Password not match</string>
    <string name="text_age_invalid">Enter a valid age</string>
    
    <string name="login_text">LOGIN</string>
    <string name="new_user">New user? Signup</string>
    <string name="text_signup">SIGN UP</string>
    <string name="text_select_language">Please Select Language</string>
    <!--//                            views                              -->
    <string name="text_male">Male/Lelaki</string>
    <string name="text_female">Female/Perempuan</string>
    <string name="forget_password_label">Forget password</string>
    <string name="send_text">Send</string>
    <string name="client_id" translatable="false">171945750837-b6c115sa4s5952up83m3dj8l6bndc26i.apps.googleusercontent.com</string>
    <string name="facebook_app_id" translatable="false">2205409826454481</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb2205409826454481</string>
    <string name="postlogin_note1">We use this information to know how much money</string>
    <string name="postlogin_note2">you are saving by giving up smoking</string>
    <string name="packet_cost">How much does a packet cost ?</string>
    <string name="packet_many">How many in a packet ?</string>
    <string name="currency_text">Malaysian Riggent(MYR)</string>
    <string name="next_btn">Next</string>
    <string name="log_out_text">Log Out</string>
    <string name="text_english">English</string>
    <string name="text_bahasa">Bahasa Melayu</string>
    <string name="term1">1.The purpose of this apps is to study on smokers level of nicotine, type of personality and their preferences in using the  modules in this apps</string>
    <string name="term2">2.This study is conducted by Nicotine Addiction Research Collaborating Centre, (NARCC), University of Malaya under project of mHealth for Smoking Cessation</string>
    <string name="term3">3. All user data and information will be protected under the approval of Medical Research Ethics Committee University Malaya Medical Center (ID No: 2018717-6497)</string>
    <string name="terms_error">Please agree the terms and conditions first.</string>
    <string name="text_accept_btn">Accept</string>
    <string name="text_decline_btn">Decline</string>
    <string name="text_save">Save</string>
    <string name="text_travel">Travel</string>
    <string name="text_luxurious">Luxurious (etc:Mobile,Shoes..)</string>
    <string name="text_medical">Medical</string>
    <string name="text_Saving">Saving</string>
    <string name="text_target_save">Target To Save</string>
    <string name="information_note1">We use this information to show you how much many</string>
    <string name="information_note2">you are saving by giving up smoking</string>
    <string name="text_target_save_link"><u>Target To Save</u></string>
    <string name="text_money">Money Saved</string>
    <string name="text_achievemnts"><u>Achievemnts</u></string>
    <string name="text_quit_function">Super Quit Function</string>
    <string name="text_by_day">Per Day</string>
    <string name="text_by_week">Per Week</string>
    <string name="text_by_month">Per Month</string>
    <string name="text_by_year">Per Year</string>
    <string name="text_done">Done</string>

    <string name="text_smoked">Smoked</string>
    <string name="text_cravings">Cravings</string>
    <string name="text_severity">Severity</string>
    <string name="text_smoke_question">Did you Smoke</string>
    <string name="text_i_smoked">I Smoked</string>
    <string name="text_resisted">I Resisted</string>
    <string name="text_carvings_question">How intense in your craving?</string>
    <string name="text_feel_questions">How do you feel?</string>
    <string name="text_happy">Happy</string>
    <string name="text_bored">Bored</string>
    <string name="text_lonely">Lonely</string>
    <string name="text_stressed">Stressed</string>

    <string name="unlock_feature"><u>Unlock Feature</u></string>
    <string name="unlock_feature_capital">UNLOCK FEATURE</string>
    <string name="text_smoke_free">Smoke Free</string>
    <string name="text_collect_points">Collect points</string>
    <string name="text_successfully_hit_target">SUCCESSFULLY HIT YOUR TARGET SAVE</string>
    <string name="text_congrats">Congratulations!</string>
    <string name="text_lorem_ipsum">Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet</string>
    <string name="text_forget_password_subheader">Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet</string>
    <string name="text_quiting_love">Quitting with love</string>
    <string name="text_social_support">Social Support</string>
    <string name="text_name_socail_support">Name of someone you love the most</string>
    <string name="text_social_feaute_desc">Lorem ipsum dolor sit amet, et homero tempor\nridens pri, ea sit illum debet. Ne pri graeci</string>
    <string name="text_name">Name</string>
    <string name="text_upload">Upload a photo of the one you love the most</string>
    <string name="text_skip">Skip</string>
    <string name="text_motvation_header">What Quitting Smoking\nTaught Me About Love</string>

    <string name="image_type_jpeg" translatable="false">image/jpeg</string>
    <string name="image_type_all" translatable="false">image/*</string>
    <string name="image_type_png" translatable="false">image/png</string>
    <string name="text_upload_btn">Upload</string>
    <string name="text_race">Race</string>

</resources>