<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/_20sdp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_smoke_question"
        android:text="@string/text_smoke_question"
        android:textSize="20sp"
        android:textStyle="bold"
        android:paddingBottom="@dimen/_10sdp"/>
    <LinearLayout

        android:layout_below="@+id/tv_smoke_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ll_smoke">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="1">
                <RadioButton
                    android:layout_weight="0.5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/text_i_smoked"/>

                <RadioButton
                    android:layout_weight="0.5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/text_resisted"/>
            </LinearLayout>
        </RadioGroup>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_intense_question"
        android:layout_below="@+id/ll_smoke"
        android:text="@string/text_carvings_question"
        android:textSize="20sp"
        android:textStyle="bold"
        android:paddingTop="@dimen/_10sdp"
        android:paddingBottom="@dimen/_10sdp"/>

    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_feel_question"
        android:layout_below="@+id/tv_intense_question"
        android:text="@string/text_feel_questions"
        android:textSize="20sp"
        android:textStyle="bold"
        android:paddingTop="@dimen/_10sdp"
        android:paddingBottom="@dimen/_10sdp"/>


    <LinearLayout
        android:layout_below="@+id/tv_feel_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/ll_happy"
        android:padding="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:background="@drawable/rounder_border">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_happy"
            android:padding="10dp"
            android:textSize="14sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_below="@+id/ll_happy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/ll_bored"
        android:padding="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:background="@drawable/rounder_border">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_bored"
            android:padding="10dp"
            android:textSize="14sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_below="@+id/ll_bored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/ll_lonely"
        android:padding="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:background="@drawable/rounder_border">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_lonely"
            android:padding="10dp"
            android:textSize="14sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_below="@+id/ll_lonely"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/ll_stressed"
        android:padding="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:background="@drawable/rounder_border">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_stressed"
            android:padding="10dp"
            android:textSize="14sp"/>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/lightgreen"
        android:textColor="@color/white"
        android:layout_below="@+id/ll_stressed"
        android:layout_margin="@dimen/_20sdp"
        android:layout_centerHorizontal="true"
        android:text="@string/text_save"
        />

</RelativeLayout>